# tainan-public-witnessing

./: .firebaserc  .gitignore  Procfile  README.md  angular.json  cypress.json  firebase.json  firestore.rules  karma.conf.js  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  tsconfig.json
.github/workflows/: firebase-hosting-merge-dev.yml  firebase-hosting-merge-develop.yml  firebase-hosting-merge-main.yml  firebase-hosting-merge-prod.yml  firebase-hosting-pr-preview-dev.yml  firebase-hosting-pr-preview-develop.yml  firebase-hosting-pr-preview-main.yml  firebase-hosting-pr-preview-prod.yml
backend/: LineNotify.py  assignment.py  backup.py  bind.py  callback.py  cloud-function-siteshift-update.py  main.py  notify.py  report.py  requirements.txt  shiftSchedule.py  vacancy.py
backend/cloud function/: cloud-function-requirement.txt  cloud-function-siteshift-update.py
backend/flask/: Dockfile  app.py  requirements.txt
cloud function/: LineNotify.py  Report.py  shiftSchedule.py
cypress/integration/: app.spec.ts
cypress/support/: commands.ts  index.ts
e2e/src/: app.e2e-spec.ts  app.po.ts  global.e2e.ts  users.e2e-spec.ts  users.po.ts
scripts/: local.js  sync-i18n.js
src/: index.html  styles.scss
src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts  routes.ts
src/app/_api/: api.interface.ts  firebase-helper.ts  index.ts  (+3 more)
src/environments/: environment.firebase.ts  environment.local.ts  environment.prod.ts  environment.test.ts  environment.ts
(+220 files in other folders)
