[tool.poetry]
name = "tainanpublicwitnessing"
version = "0.1.0"
description = ""
authors = ["xellosiris <xellosiris@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
firebase-admin = "^5.4.0"
pandas = "^1.5.0"
line-bot-sdk = "^2.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
