[tool.poetry]
name = "tainanpublicwitnessing"
version = "0.1.0"
description = ""
authors = ["xellosiris <xellosiris@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
firebase-admin = "^5.4.0"
pandas = "^1.5.0"
requests = "^2.28.1"
gunicorn = "^20.1.0"
flask-limiter = {extras = ["redis"], version = "^2.7.0"}
flask = {extras = ["async"], version = "^2.2.2"}

[tool.poetry.dev-dependencies]
ipykernel = "^6.16.0"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
